# knot-api

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
deploy/: docker-compose.yml  knot-api.service  knot-entrypoint.sh  knot.conf  member-template.conf
src/knot_api/: __init__.py  api.py  app.py  auth.py  config.py  dependencies.py  errors.py  knot.py  models.py  naming.py  service.py  zonefile.py
tests/: conftest.py  test_api.py  test_config.py  test_knot.py  test_naming.py  test_service.py  test_zonefile.py
tests/integration/: test_e2e.py
